tests/negative/test_pass_invoke_arg_ref.orb
data Foo {
    x:i32
} (eval (fnc dropFoo (val:Foo::noDrop) () {}));

mac bar (x::preprocess) {
    block Foo {
        pass x;
    };

    ret \(block {});
};

fnc main () () {
    eval (sym f:Foo);
    bar f;
};